Bug 161318 - Unexpected page break, related to clearing break
Summary: Unexpected page break, related to clearing break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-05-29 11:01 UTC by Miklos Vajna
Modified: 2024-06-06 14:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (12.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-05-29 11:01 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-05-29 11:01:56 UTC
Created attachment 194422 [details]
Minimal reproducer

Steps to reproduce the problem:

1. Open the attached document

2. Check the number of pages

Expected result: just 2 simple paragraphs, should be 1 page like in Word.

Actual result: 2 pages.
Comment 1 Commit Notification 2024-05-30 11:30:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/304cc248f15d795bc9fe8b751b0d98841b8ff5d1

tdf#161318 sw clearing break: ignore wrap-through anchored objects

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Timur 2024-05-30 11:53:20 UTC
Regression from LO 7.4:

commit f86d1482bef285f90079b5130e410646db96cf58	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Tue Mar 08 08:42:44 2022 
committer	Miklos Vajna <vmiklos@collabora.com>	Tue Mar 08 12:25:55 2022 
sw clearing breaks: add DOCX import

Thanks for the speedy fix.
Comment 3 Commit Notification 2024-05-31 10:59:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e00479404af5058b982c447e485af995d552e372

tdf#161318 sw clearing break: fix this at section end

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-06-06 14:36:20 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/317e12faa71dab378da6db48b5d612ad258c058c

tdf#161318 sw clearing break: ignore wrap-through anchored objects

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.