tdf#161318 sw clearing break: fix this at section end

Regression from commit 19bca24486315cc35f873486e6a2dd18394d0614
(tdf#126287: docx import: use defered linebreak, 2022-02-07), the bugdoc
has a single paragraph in the first section, containing a clearing
break, which is lost. This leads to overlapping text as the text is
shifted up.

Seems the intention was to avoid a line break at the very end of the
document, as that can lead to an empty page with "next page" section
breaks, with non-clearing line breaks.

Fix the problem by only doing this for non-clearing line breaks: that
keeps the old use-case working, but the new, clearing line break then
shifts down the text, so no text overlap happens.

Switching from appendTextPortion() to HandleLineBreak() helps because
HandleLineBreak() does exactly appendTextPortion("\n") in the
non-clearing case, but knows about the stream stack's line break clear
status.

(cherry picked from commit e00479404af5058b982c447e485af995d552e372)

Conflicts:
	writerfilter/qa/cppunittests/dmapper/data/clearing-break-sect-end.docx
	writerfilter/source/dmapper/DomainMapper.cxx

Change-Id: I38868eeeac55e20e86b668e9baf7e0d6a4976608
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168361
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit f1338ba7de2ab1abf98283f977605a9d1053b82d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168385
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>